--- a/ChessProject-Csharp/src/Chess.csproj
+++ b/ChessProject-Csharp/src/Chess.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BoardPiece.cs" />
     <Compile Include="ChessBoard.cs" />
     <Compile Include="MovementType.cs" />
     <Compile Include="Pawn.cs" />
